tests/errors/validation/ref-modifier-on-function.fn
---
Description: ref modifier applied to a function declaration
Expected: FN2005
---

type Holder
{
    ref fn BadModFn() -> i32
    {
        return 0
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
